updated schedule with time

--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -98,7 +98,8 @@ The schedule for the different curricula are listed here:
   <div class="col-md-6">
     <h3>Day 1</h3>
     <table class="table table-striped">
-      <tr> <td>09:00 AM</td>  <td>Review of Day 2</td> </tr>
+      <tr> <td>09:00 AM</td>  <td>Review of Day 1</td> </tr>
+      <tr> <td>09:05 AM</td>  <td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank">Pre-workshop Survey</a></td> </tr>
       <tr> <td>09:15 AM</td>  <td><a href="https://datacarpentry.org/r-socialsci/setup.html" target="_blank">Check R Setup</a></td> </tr>
       <tr> <td>09:35 AM</td>  <td><a href="https://datacarpentry.org/r-socialsci/00-intro/index.html" target="_blank">1. Before we Start</a></td> </tr>
 	   
@@ -115,7 +116,7 @@ The schedule for the different curricula are listed here:
   <div class="col-md-6">
     <h3>Day 2</h3>
     <table class="table table-striped">
-     <tr> <td>09:00 AM</td>  <td>DataUp assessments and Review of Day 3</td> </tr>
+     <tr> <td>09:00 AM</td>  <td>Data Up assessments and Review of Day 2</td> </tr>
       <tr> <td>09:30 AM</td>  <td><a href="https://datacarpentry.org/r-socialsci/03-dplyr-tidyr/index.html" target="_blank">4. Data Wrangling with dplyr and tidyr</a></td> </tr>
       <tr> <td>11:00 AM</td>  <td>Break</td> </tr>
       <tr> <td>11:15 AM</td>  <td><a href="https://datacarpentry.org/r-socialsci/04-ggplot2/index.html" target="_blank">5. Data Visualisation with ggplot2</a></td> </tr>
