--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -98,7 +98,7 @@ The schedule for the different curricula are listed here:
   <div class="col-md-6">
     <h3>Day 1</h3>
     <table class="table table-striped">
-      <tr> <td>09:00 AM</td>  <td>Introductions - Participants </td> </tr>
+      <tr> <td>09:00 AM</td>  <td>Introductions - Instructors and participants </td> </tr>
       <tr> <td>09:05 AM</td>  <td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank">Pre-workshop Survey</a></td> </tr>
       <tr> <td>09:15 AM</td>  <td><a href="https://datacarpentry.org/r-socialsci/setup.html" target="_blank">Check R Setup</a></td> </tr>
       <tr> <td>09:35 AM</td>  <td><a href="https://datacarpentry.org/r-socialsci/00-intro/index.html" target="_blank">1. Before we Start</a></td> </tr>
