--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -31,7 +31,7 @@ The schedule for the different curricula are listed here:
     <h3>Day 2</h3>
     <table class="table table-striped">
      <tr> <td>09:00 AM</td>  <td>Data Up assessments and Review of Day 2</td> </tr>
-      <tr> <td>09:30 AM</td>  <td><a href="https://datacarpentry.org/R-ecology-lesson/03-dplyr.html" target="_blank">4. Data Wrangling with dplyr and tidyr</a></td> </tr>
+      <tr> <td>09:30 AM</td>  <td><a href="https://datacarpentry.org/R-ecology-lesson/03-dplyr.html" target="_blank">4. Manipulating, analyzing and exporting data with tidyverse</a></td> </tr>
       <tr> <td>11:00 AM</td>  <td>Break</td> </tr>
       <tr> <td>11:15 AM</td>  <td><a href="https://datacarpentry.org/R-ecology-lesson/04-visualization-ggplot2.html" target="_blank">5. Data Visualisation with ggplot2</a></td> </tr>
       <tr> <td>12:45 PM</td>  <td>Wrap-up</td> </tr>
