--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -14,12 +14,12 @@ The schedule for the different curricula are listed here:
     <table class="table table-striped">
       <tr> <td>09:00 AM</td>  <td>Introductions - Instructors and participants </td> </tr>
       <tr> <td>09:05 AM</td>  <td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank">Pre-workshop Survey</a></td> </tr>
-      <tr> <td>09:15 AM</td>  <td><a href="https://datacarpentry.org/r-socialsci/setup.html" target="_blank">Check R Setup</a></td> </tr>
-      <tr> <td>09:35 AM</td>  <td><a href="https://datacarpentry.org/R-ecology-lesson/00-before-we-start.html" target="_blank">1. Before we Start</a></td> </tr>
+      <tr> <td>09:15 AM</td>  <td><a href="" target="_blank">Check R Setup</a></td> </tr>
+      <tr> <td>09:35 AM</td>  <td><a href="" target="_blank">1. Before we Start</a></td> </tr>
 	   
-      <tr> <td>10:15 AM</td>  <td><a href="https://datacarpentry.org/R-ecology-lesson/01-intro-to-r.html" target="_blank">2. Introduction to R</a></td> </tr>
+      <tr> <td>10:15 AM</td>  <td><a href="" target="_blank">2. Introduction to R</a></td> </tr>
       <tr> <td>11:30 AM</td>  <td>Break</td> </tr>
-      <tr> <td>11:45 AM</td>  <td><a href="https://datacarpentry.org/R-ecology-lesson/02-starting-with-data.html" target="_blank">3. Starting with Data</a></td> </tr>
+      <tr> <td>11:45 AM</td>  <td><a href="" target="_blank">3. Starting with Data</a></td> </tr>
 	    
       <tr> <td>12:55 PM</td>  <td>Wrap-up</td> </tr>
       <tr> <td>01:00 PM</td>  <td>END</td> </tr>
@@ -31,9 +31,9 @@ The schedule for the different curricula are listed here:
     <h3>Day 2</h3>
     <table class="table table-striped">
      <tr> <td>09:00 AM</td>  <td>Data Up assessments and Review of Day 2</td> </tr>
-      <tr> <td>09:30 AM</td>  <td><a href="https://datacarpentry.org/R-ecology-lesson/03-dplyr.html" target="_blank">4. Manipulating, analyzing and exporting data with tidyverse</a></td> </tr>
+      <tr> <td>09:30 AM</td>  <td><a href="" target="_blank">4. Manipulating, analyzing and exporting data with tidyverse</a></td> </tr>
       <tr> <td>11:00 AM</td>  <td>Break</td> </tr>
-      <tr> <td>11:15 AM</td>  <td><a href="https://datacarpentry.org/R-ecology-lesson/04-visualization-ggplot2.html" target="_blank">5. Data Visualisation with ggplot2</a></td> </tr>
+      <tr> <td>11:15 AM</td>  <td><a href="" target="_blank">5. Data Visualisation with ggplot2</a></td> </tr>
       <tr> <td>12:45 PM</td>  <td>Wrap-up</td> </tr>
       <tr> <td>12:50 PM</td>  <td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank">Post-Workshop Survey</a></td> </tr>
       <tr> <td>01:00 PM</td>  <td>END</td> </tr>
